Added links to the footer

--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
   </head>
   <body>
     <h1>Pretty much the weather</h1>
-    <footer>Coded by Argyro Vlachaki</footer>
+    <footer>
+      Coded by
+      <a href="https://github.com/CtrlFrontfire" target="_blank"
+        >Argyro Vlachaki</a
+      >, code hosted on
+      <a
+        href="https://github.com/CtrlFrontfire/pretty-weather-forecast"
+        target="_blank"
+        >GitHub</a
+      >
+      website hosted on
+      <a href="https://pretty-weather-forecast.netlify.app/" target="_blank"
+        >Netlify</a
+      >
+    </footer>
   </body>
 </html>
