--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
       Coded by
       <a href="https://github.com/CtrlFrontfire" target="_blank"
         >Argyro Vlachaki</a
-      >, code hosted on
+      >, is
       <a
         href="https://github.com/CtrlFrontfire/pretty-weather-forecast"
         target="_blank"
-        >GitHub</a
+        >open-sourced on GitHub</a
       >
-      website hosted on
+      and
       <a href="https://pretty-weather-forecast.netlify.app/" target="_blank"
-        >Netlify</a
+        >hosted on Netlify</a
       >
     </footer>
   </body>
