Added HTML to the project

--- a/index.html
+++ b/index.html
@@ -3,12 +3,34 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=h1, initial-scale=1.0" />
-    <title>Pretty Weather App</title>
+    <title>Pretty Weather Forecast</title>
   </head>
   <body>
-    <h1>Pretty much the weather</h1>
+    <h1>Pretty Weather Forecast</h1>
+    <header>
+      <form>
+        <input type="text" placeholder="Enter a city" required />
+        <input type="submit" value="search" />
+      </form>
+    </header>
+    <main>
+      <div>
+        <h2>
+          Clear sky <br />
+          25°C <br />
+          ☀️<br />
+          London <br />
+          Thur 20 June 2024, 21:33
+        </h2>
+        <p>
+          Humidity: 66%, Wind:5.66km/h
+          <br />
+          Other info: xxx, other info: xxx;
+        </p>
+      </div>
+    </main>
     <footer>
-      Coded by
+      This project was coded by
       <a href="https://github.com/CtrlFrontfire" target="_blank"
         >Argyro Vlachaki</a
       >, is
