Styled the main container and added custom fonts

--- a/index.html
+++ b/index.html
@@ -3,46 +3,55 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=h1, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Dosis:wght@200..800&family=Inter+Tight:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
     <title>Pretty Weather Forecast</title>
+    <link rel="stylesheet" href="src/index.css" />
   </head>
   <body>
-    <h1>Pretty Weather Forecast</h1>
-    <header>
-      <form>
-        <input type="text" placeholder="Enter a city" required />
-        <input type="submit" value="search" />
-      </form>
-    </header>
-    <main>
-      <div>
-        <h2>
-          Clear sky <br />
-          25°C <br />
-          ☀️<br />
-          London <br />
-          Thur 20 June 2024, 21:33
-        </h2>
-        <p>
-          Humidity: 66%, Wind:5.66km/h
-          <br />
-          Other info: xxx, other info: xxx;
-        </p>
-      </div>
-    </main>
-    <footer>
-      This project was coded by
-      <a href="https://github.com/CtrlFrontfire" target="_blank"
-        >Argyro Vlachaki</a
-      >, is
-      <a
-        href="https://github.com/CtrlFrontfire/pretty-weather-forecast"
-        target="_blank"
-        >open-sourced on GitHub</a
-      >
-      and
-      <a href="https://pretty-weather-forecast.netlify.app/" target="_blank"
-        >hosted on Netlify</a
-      >
-    </footer>
+    <div class="weather-forecast">
+      <h1>Pretty Weather Forecast</h1>
+      <header>
+        <form>
+          <input type="text" placeholder="Enter a city" required />
+          <input type="submit" value="search" />
+        </form>
+      </header>
+      <main>
+        <div>
+          <h2>
+            Clear sky <br />
+            25°C <br />
+            ☀️<br />
+            London <br />
+            Thur 20 June 2024, 21:33
+          </h2>
+          <p>
+            Humidity: 66%, Wind:5.66km/h
+            <br />
+            Other info: xxx, other info: xxx;
+          </p>
+        </div>
+      </main>
+      <footer>
+        This project was coded by
+        <a href="https://github.com/CtrlFrontfire" target="_blank"
+          >Argyro Vlachaki</a
+        >, is
+        <a
+          href="https://github.com/CtrlFrontfire/pretty-weather-forecast"
+          target="_blank"
+          >open-sourced on GitHub</a
+        >
+        and
+        <a href="https://pretty-weather-forecast.netlify.app/" target="_blank"
+          >hosted on Netlify</a
+        >
+      </footer>
+    </div>
   </body>
 </html>
