--- a/index.html
+++ b/index.html
@@ -43,9 +43,7 @@
           </div>
           <div class="city-date-container">
             <div class="weather-app-city" id="weather-app-city">London</div>
-            <div class="weather-app-timestamp">
-              Thursday 20 June 2024, 21:33
-            </div>
+            <div class="weather-app-timestamp" id="weather-app-timestamp"></div>
           </div>
           <div class="weather-app-details">
             <div class="high-temperature">
