--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
       <main>
         <div class="weather-app-data">
           <div class="temperature-container">
-            <div class="weather-app-condition">Clear sky</div>
+            <div class="weather-app-condition" id="weather-app-condition">
+              Clear sky
+            </div>
             <div class="temperature-unit">
               <div class="weather-app-temperature" id="weather-app-temperature">
                 25
@@ -43,23 +45,25 @@
           </div>
           <div class="city-date-container">
             <div class="weather-app-city" id="weather-app-city">London</div>
-            <div class="weather-app-timestamp" id="weather-app-timestamp"></div>
+            <div class="weather-app-timestamp" id="weather-app-timestamp">
+              Thursday 22 June 2024, 12:45
+            </div>
           </div>
           <div class="weather-app-details">
-            <div class="high-temperature">
-              <strong>23° </strong><br />
-              High
+            <div class="real-feel">
+              <strong id="feel-like">23°</strong><br />
+              Real feel
             </div>
-            <div class="low-temperature">
-              <strong>14°</strong> <br />
-              Low
+            <div class="pressure">
+              <strong id="current-pressure">1019</strong><br />
+              Pressure
             </div>
             <div class="humidity-levels">
-              <strong>66%</strong> <br />
+              <strong id="current-humidity">66%</strong><br />
               Rain
             </div>
             <div class="wind-speed">
-              <strong>5.66km/h</strong> <br />
+              <strong id="current-wind">5.66km/h</strong><br />
               Wind
             </div>
           </div>
