--- a/index.html
+++ b/index.html
@@ -36,34 +36,33 @@
               Clear sky
             </div>
             <div class="temperature-unit">
-              <div class="weather-app-temperature" id="weather-app-temperature">
-                25
-              </div>
+              <div
+                class="weather-app-temperature"
+                id="weather-app-temperature"
+              ></div>
               <div class="weather-app-unit">°</div>
             </div>
-            <div class="condition-icon">☀️</div>
+            <div id="icon"></div>
           </div>
           <div class="city-date-container">
-            <div class="weather-app-city" id="weather-app-city">London</div>
-            <div class="weather-app-timestamp" id="weather-app-timestamp">
-              Thursday 22 June 2024, 12:45
-            </div>
+            <div class="weather-app-city" id="weather-app-city"></div>
+            <div class="weather-app-timestamp" id="weather-app-timestamp"></div>
           </div>
           <div class="weather-app-details">
             <div class="real-feel">
-              <strong id="feel-like">23°</strong><br />
+              <strong id="feel-like"></strong><br />
               Real feel
             </div>
             <div class="pressure">
-              <strong id="current-pressure">1019</strong><br />
+              <strong id="current-pressure"></strong><br />
               Pressure
             </div>
             <div class="humidity-levels">
-              <strong id="current-humidity">66%</strong><br />
+              <strong id="current-humidity"></strong><br />
               Rain
             </div>
             <div class="wind-speed">
-              <strong id="current-wind">5.66km/h</strong><br />
+              <strong id="current-wind"></strong><br />
               Wind
             </div>
           </div>
