--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="src/index.css" />
   </head>
   <body>
-    <div class="weather-forecast">
+    <div class="weather-app">
       <h1>Pretty Weather Forecast</h1>
       <header>
         <form class="search-form" id="search-form">
@@ -65,6 +65,13 @@
               <strong id="current-wind"></strong><br />
               Wind
             </div>
+          </div>
+        </div>
+        <div class="weather-forecast">
+          <div class="weather-forecast-day">Thur</div>
+          <div class="weather-forecast-icon">☀️</div>
+          <div class="weather-forecast-temperatures">
+            <strong> 21°</strong> 18°
           </div>
         </div>
       </main>
