--- a/index.html
+++ b/index.html
@@ -68,10 +68,55 @@
           </div>
         </div>
         <div class="weather-forecast">
-          <div class="weather-forecast-day">Thur</div>
-          <div class="weather-forecast-icon">☀️</div>
-          <div class="weather-forecast-temperatures">
-            <strong> 21°</strong> 18°
+          <div class="weather-forecast-day">
+            <div class="weather-forecast-date">Sun</div>
+            <div class="weather-forecast-icon">☀️</div>
+            <div class="weather-forecast-temperatures">
+              <div class="weather-forecast-temperature">
+                <strong> 21°</strong>
+              </div>
+              <div class="weather-forecast-temperature">18°</div>
+            </div>
+          </div>
+          <div class="weather-forecast-day">
+            <div class="weather-forecast-date">Mon</div>
+            <div class="weather-forecast-icon">☀️</div>
+            <div class="weather-forecast-temperatures">
+              <div class="weather-forecast-temperature">
+                <strong> 21°</strong>
+              </div>
+              <div class="weather-forecast-temperature">18°</div>
+            </div>
+          </div>
+          <div class="weather-forecast-day">
+            <div class="weather-forecast-date">Mon</div>
+            <div class="weather-forecast-icon">☀️</div>
+            <div class="weather-forecast-temperatures">
+              <div class="weather-forecast-temperature">
+                <strong> 21°</strong>
+              </div>
+              <div class="weather-forecast-temperature">18°</div>
+            </div>
+          </div>
+          <div class="weather-forecast-day">
+            <div class="weather-forecast-date">Mon</div>
+            <div class="weather-forecast-icon">☀️</div>
+            <div class="weather-forecast-temperatures">
+              <div class="weather-forecast-temperature">
+                <strong> 21°</strong>
+              </div>
+              <div class="weather-forecast-temperature">18°</div>
+            </div>
+          </div>
+          <div class="weather-forecast-day">
+            <div class="weather-forecast-date">Mon</div>
+            <div class="weather-forecast-icon">☀️</div>
+            <div class="weather-forecast-temperatures">
+              <div class="weather-forecast-temperature">
+                <strong> 21°</strong>
+              </div>
+              <div class="weather-forecast-temperature">18°</div>
+            </div>
           </div>
         </div>
       </main>
