--- a/index.html
+++ b/index.html
@@ -67,58 +67,7 @@
             </div>
           </div>
         </div>
-        <div class="weather-forecast">
-          <div class="weather-forecast-day">
-            <div class="weather-forecast-date">Sun</div>
-            <div class="weather-forecast-icon">☀️</div>
-            <div class="weather-forecast-temperatures">
-              <div class="weather-forecast-temperature">
-                <strong> 21°</strong>
-              </div>
-              <div class="weather-forecast-temperature">18°</div>
-            </div>
-          </div>
-          <div class="weather-forecast-day">
-            <div class="weather-forecast-date">Mon</div>
-            <div class="weather-forecast-icon">☀️</div>
-            <div class="weather-forecast-temperatures">
-              <div class="weather-forecast-temperature">
-                <strong> 21°</strong>
-              </div>
-              <div class="weather-forecast-temperature">18°</div>
-            </div>
-          </div>
-          <div class="weather-forecast-day">
-            <div class="weather-forecast-date">Mon</div>
-            <div class="weather-forecast-icon">☀️</div>
-            <div class="weather-forecast-temperatures">
-              <div class="weather-forecast-temperature">
-                <strong> 21°</strong>
-              </div>
-              <div class="weather-forecast-temperature">18°</div>
-            </div>
-          </div>
-          <div class="weather-forecast-day">
-            <div class="weather-forecast-date">Mon</div>
-            <div class="weather-forecast-icon">☀️</div>
-            <div class="weather-forecast-temperatures">
-              <div class="weather-forecast-temperature">
-                <strong> 21°</strong>
-              </div>
-              <div class="weather-forecast-temperature">18°</div>
-            </div>
-          </div>
-          <div class="weather-forecast-day">
-            <div class="weather-forecast-date">Mon</div>
-            <div class="weather-forecast-icon">☀️</div>
-            <div class="weather-forecast-temperatures">
-              <div class="weather-forecast-temperature">
-                <strong> 21°</strong>
-              </div>
-              <div class="weather-forecast-temperature">18°</div>
-            </div>
-          </div>
-        </div>
+        <div class="weather-forecast" id="forecast"></div>
       </main>
       <footer>
         This project was coded by
