--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
               ></div>
               <div class="weather-app-unit">°</div>
             </div>
-            <div id="icon"></div>
+            <div class="icon-wrapper" id="icon"></div>
           </div>
           <div class="city-date-container">
             <div class="weather-app-city" id="weather-app-city"></div>
@@ -66,8 +66,8 @@
               Wind
             </div>
           </div>
+          <div class="weather-forecast" id="forecast"></div>
         </div>
-        <div class="weather-forecast" id="forecast"></div>
       </main>
       <footer>
         This project was coded by
